# wgpu-3dgs-viewer

./: CHANGELOG.md  Cargo.toml  README.md
coverage/: badge.json  lcov.info
examples/: multi_model.rs  selection.rs  simple.rs
examples/utils/: selection.rs
src/: error.rs  lib.rs  multi_model.rs  preprocessor.rs  radix_sorter.rs  renderer.rs
src/buffer/: crop_bounds.rs  mod.rs
src/selection/: mod.rs  viewport_selector.rs  viewport_texture_brush.rs  viewport_texture_rectangle.rs
src/shader/: preprocess.wesl  render.wesl  utils.wesl
tests/common/: assert_render_target.rs  test_context.rs
