[package]
name = "wgpu-3dgs-viewer"
version = "0.7.0"
edition = "2024"
authors = ["Lio Qing"]
license = "MIT OR Apache-2.0"
description = "A 3D Gaussian splatting viewing library written in Rust using wgpu."
readme = "README.md"
include = [
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
    "Cargo.toml",
    "examples/**/*",
    "src/**/*",
]
repository = "https://github.com/LioQing/wgpu-3dgs-viewer"
homepage = "https://github.com/LioQing/wgpu-3dgs-viewer"
keywords = ["gaussian-splatting", "wgpu", "graphics", "ply", "spz"]
categories = ["graphics", "rendering", "wasm"]

[lib]
name = "wgpu_3dgs_viewer"
path = "src/lib.rs"

[[example]]
name = "multi-model"
path = "examples/multi_model.rs"
required-features = ["multi-model"]
doc-scrape-examples = true

[[example]]
name = "selection"
path = "examples/selection.rs"
required-features = ["viewer-selection"]
doc-scrape-examples = true

[[example]]
name = "simple"
path = "examples/simple.rs"
doc-scrape-examples = true

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
multi-model = []
selection = ["editor"]
viewer-selection = ["selection"]
editor = ["dep:wgpu-3dgs-editor"]

[dependencies]
# Consume our core fork by git `main` (carries the glam 0.33 bump) so a git
# consumer resolves core transitively with no [patch] needed on their side.
wgpu-3dgs-core = { git = "ssh://git@github.com/ssoj13/wgpu-3dgs-core.git", branch = "main" }
wgpu-3dgs-editor = { version = "0.7", optional = true }

bytemuck = { version = "1.25", features = [
    "derive",
    "extern_crate_alloc",
    "min_const_generics",
] }
bitflags = { version = "2.11", features = ["bytemuck"] }
glam = { version = "0.33", features = ["bytemuck"] }
half = { version = "2.7", features = ["bytemuck"] }
log = "0.4"
oneshot = "0.2"
paste = "1.0"
thiserror = "2.0"
wgpu = "29.0"
wesl = "0.3"

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }
colored = { version = "3.1" }
env_logger = { version = "0.11" }
pollster = { version = "0.4" }
winit = { version = "0.30" }

[patch.crates-io]
# `wgpu-3dgs-core` is now a direct git dep above (no crates-io patch needed).
# editor stays on upstream: optional/off by default, and there is no local clone in cglibs/.
wgpu-3dgs-editor = { git = "https://github.com/LioQing/wgpu-3dgs-editor", optional = true, tag = "v0.7.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
